--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- <?php
+
+?> -->
+
+
 
 <!doctype html>
 <html class="no-js" lang="en">
@@ -57,7 +62,7 @@
                         <div class="col-lg-2">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="https://template.hasthemes.com/corano/corano/assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="images/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                         </div>
@@ -148,7 +153,7 @@
                         <div class="mobile-main-header">
                             <div class="mobile-logo">
                                 <a href="index.html">
-                                    <img src="assets/img/logo/logo.png" alt="Brand Logo">
+                                    <img src="images/logo.png" alt="Brand Logo">
                                 </a>
                             </div>
                             <div class="mobile-menu-toggler">
@@ -2535,7 +2540,7 @@
                             <div class="widget-title">
                                 <div class="widget-logo">
                                     <a href="index.html">
-                                        <img src="images/logo.jpeg" alt="brand logo">
+                                        <img src="images/logo.png" alt="brand logo">
                                     </a>
                                 </div>
                             </div>
@@ -2615,7 +2620,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="copyright-text text-center">
-                            <p>&copy; 2021 <b>Corano</b> Made with <i class="fa fa-heart text-danger"></i> by <a href="https://hasthemes.com/"><b>HasThemes</b></a></p>
+                            <p>&copy; 2021 <b>Yoginee</b> Made with <i class="fa fa-heart text-danger"></i><a href="https://hasthemes.com/"></a></p>
                         </div>
                     </div>
                 </div>
@@ -2638,36 +2643,36 @@
                             <div class="col-lg-5">
                                 <div class="product-large-slider">
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                        <img src="images/product/product-1.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
+                                        <img src="images/product/product-2.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img3.jpg" alt="product-details" />
+                                        <img src="images/product/product-3.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img4.jpg" alt="product-details" />
+                                        <img src="images/product/product-4.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-large-img img-zoom">
-                                        <img src="assets/img/product/product-details-img5.jpg" alt="product-details" />
+                                        <img src="images/product/product-5.webp" alt="product-details" />
                                     </div>
                                 </div>
                                 <div class="pro-nav slick-row-10 slick-arrow-style">
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img1.jpg" alt="product-details" />
+                                        <img src="images/product/product-1.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img2.jpg" alt="product-details" />
+                                        <img src="images/product/product-2.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img3.jpg" alt="product-details" />
+                                        <img src="images/product/product-3.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img4.jpg" alt="product-details" />
+                                        <img src="images/product/product-4.webp" alt="product-details" />
                                     </div>
                                     <div class="pro-nav-thumb">
-                                        <img src="assets/img/product/product-details-img5.jpg" alt="product-details" />
+                                        <img src="images/product/product-5.webp" alt="product-details" />
                                     </div>
                                 </div>
                             </div>
