--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="twitter-feed-content text-center">
-                            <p>Check out "Corano - Multipurpose eCommerce Bootstrap 4 template" on #Envato by @<a href="#">Corano</a> #Themeforest <a href="http://1.envato.market/9LbxW">http://1.envato.market/9LbxW</a></p>
+                            <p>Because you are precious to us </p>
                         </div>
                     </div>
                 </div>
